- Fixed parsing of trust store updated interval - Fixed buggy footer in vomses webapp page - Fixed misaligned vo information from main page as seen on Chrome